[project]
name = "da-supervised-learning-dcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "oliveroliverio",email = "oliveroliverio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

